css/board.css
/* ... */
.board-headline-button {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.board-headline-text {
    color: #000;
    /* Version 2/t1 */
    font-size: 61px;
    font-style: normal;
    font-weight: 700;
    line-height: 120%;
    /* 73.2px */
}

.board-headline-container-search-add {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 32px;
}

.board-input-search-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex: 1 0 0;
    width: 314px;
    padding: 8px 16px;
    border-radius: 10px;
    border: 1px solid #A8A8A8;
    background: #FFF;
}

.board-input-search-container:focus-within {
    border-color: #29ABE2;
}

.board-input-search {
    width: 232px;
    color: #D1D1D1;
    border: none;
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: 120%;
}

textarea:focus,
input:focus {
    outline: none;
}

.board-input-search:focus {
    color: #000000;
}

.board-input-search-icon:hover {
    background: #EEEEEE;
    border-radius: 45px;
    cursor: pointer;
}

.board-input-search-icon:active path {
    fill: #29ABE2;
}

.board-input-search-icons {
    display: flex;
    align-items: center;
    gap: 16px;
}

.board-button-addTask-mobile {
    display: none;
}

.board-button-addTask {
    display: flex;
    padding: 8px 16px;
    justify-content: center;
    align-items: center;
    gap: 4px;
    border-radius: 10px;
    border: 1px solid #2A3647;
    background: #2A3647;
}

.board-button-addTask-mobile:hover,
.board-button-addTask:hover {
    background: #29ABE2;
    border-color: #29ABE2;
    cursor: pointer;
}

.board-text-addTask {
    color: #FFF;
    font-family: Inter;
    font-size: 21px;
    font-style: normal;
    font-weight: 700;
    line-height: 120%;
    /* 25.2px */
}

/* sytle task area */
.board-task-main {
    display: flex;
    /* flex-wrap: wrap; */
    max-width: 1208px;
    height: 100%;
    padding: 0px 64px;
    justify-content: space-between;
    gap: 24px;
}

.board-task-category {
    /* Padding for hover effekt drag and drop */
    padding-top: 16px;
    /*  */
    display: flex;
    width: 248px;
    flex-direction: column;
    align-items: center;
    justify-content: stretch;
    margin-bottom: 10px;
}

.board-task-headline {
    position: sticky;
    top: 100px;
    background-color: #F6F7F8;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 248px;
    padding: 8px 4px;
    border-radius: 10px;
    z-index: 10;
}

.board-task-container {
    width: 100%;
    flex: 1;
}

.board-add-task-headline {
    color: var(--menu-color, #42526E);
    font-size: 20px;
    font-style: normal;
    font-weight: 700;
    line-height: 120%;
}

.board-add-task-category {
    width: 24px;
    height: 24px;
    padding: 3px;
    color: #2A3647;
    border-radius: 8px;
    border: 2px solid #2A3647;
}

.board-add-task-category:hover,
.board-add-task-category:hover path {
    stroke: #29ABE2;
    border: 2px solid var(--Ligth-blue, #29ABE2);
    transition: ease-out;
    transition-duration: 0.3s;
    cursor: pointer;
}

.board-no-task-feedback {
    display: flex;
    height: 48px;
    margin-top: 16px;
    /* flex-direction: column; */
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    border: 1px dashed var(--icon, #A8A8A8);
    background: #E7E7E7;
    /* nuevo */
    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
}

.board-no-task-feedback-text {
    color: var(--icon, #A8A8A8);
    font-family: "Open Sans";
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 120%;
    /* 19.2px */
}

span.board-task-card-preview,
p.board-task-card-preview {
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 120%;
}

.board-task-card-preview {
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    margin-top: 16px;
    max-width: 252px;
    padding: 16px;
    border-radius: 24px;
    background: var(--white, #FFF);
    /* shadoe backlog box */
    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
}

.board-task-card-preview:hover {
    cursor: pointer;
    transform: rotate(5deg);
    transition: ease-in-out;
    transition-duration: 0.2s;
}

.board-task-card-taskcategory {
    width: fit-content;
    padding: 4px 16px;
    margin-bottom: 24px;
    border-radius: 8px;
    /* background: #0038FF; */
    color: #FFF;
    /* font-size: 16px; */
    /* font-style: normal;
    font-weight: 400;
    line-height: 120%; */
}

.board-userstory-color {
    background: #0038FF;
}

.board-technicaltask-color {
    background: #1FD7C1;
}

.board-task-card-headline {
    margin-bottom: 8px;
    color: var(--Version-2-main-color, #2A3647);
    /* font-size: 16px; */
    /* font-style: normal; */
    font-weight: 700;
    /*line-height: 120%; */
    /* 19.2px */
}

.board-task-card-description {

    color: var(--icon, #A8A8A8);
    margin-bottom: 24px;
    /* Version 2/body */
    /* font-family: Inter;
font-size: 16px;
font-style: normal;
font-weight: 400;
line-height: 120%; */
    /* 19.2px */
}

.board-line-clamp {
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

.board-task-card-progress-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0px 8px 2px 0px;
    width: 220px;
    height: 16px;
    margin-bottom: 24px;
}

.board-task-card-progressbar {
    width: 128px;
    height: 8px;
    border-radius: 8px;
    background: #F4F4F4;
}

.board-task-card-progress {
    width: 128px;
    height: 8px;
    border-radius: 16px;
    background: var(--Version-2-main-color, #4589FF);
}

.board-task-card-progress-text {
    color: #000;
    font-size: 12px;
}

.board-task-card-profile-priority {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
/* ... */

